basic editor functionality

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     background-image: url("bg.png");
 }
 
+canvas {
+    image-rendering: pixelated;
+    image-rendering: optimizeSpeed;
+}
+
 #mainflex {
     display: flex;
     justify-content: center;
