--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html, body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
 body {
     background-image: url("bg.png");
 }
@@ -9,10 +15,10 @@ canvas {
 
 #mainflex {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap-reverse;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    flex-flow: row wrap-reverse;
+    justify-content: space-between;
+    margin: 0 2vw;
+    height: 100%;
 }
 
 * {
@@ -29,44 +35,41 @@ h1 {
     margin: 10px;
 }
 
-.code {
-    margin: 0pt 0pt 0pt 0pt;
-    flex: 1 1 40em;
-    height: 40em;
-    resize: vertical;
-    min-width: 20em;
+#codepane {
+    flex: 40ch 1 1;
+    margin: 0;
+    align-self: start;
+    line-height: 18px;
 
     background-color: #ffd;
     overflow: scroll;
-    border: none;
     padding: 10pt;
 }
 
 .emulator {
-    flex: 1 1 256px;
-    min-width: 64px;
-    max-width: calc(100vmin - 80px);
+    flex: auto 1 2;
+    max-width: calc(100vmin - 70px);
 }
 
 #screen {
-    margin: auto;
-    width: calc(100% - 30pt);
-    max-height: calc(100vmin - 80px);
+    width: calc(100% - 20pt);
+    max-height: calc(100vmin - 70px);
     background-color: thistle;
-    border: 15pt;
+    border: 10pt;
     border-style: solid;
     border-color: darkgrey;
 }
 
 #cursor {
-    display: inline;
+    position: relative;
+    width: 0;
+    height: 0;
     animation: 0.5s linear infinite cursor_blink;
-    
 }
 
 @keyframes cursor_blink {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
+    0% { opacity: 0.8; }
+    50% { opacity: 0.2; }
 }
 
 #run {
@@ -81,64 +84,22 @@ h1 {
     color: white;
 }
 
-.c_label {
+.c {
+    display: inline;
+}
+
+.branchlabel {
     display: inline-block;
+    width: 10ch;
     color: deeppink;
-    width: 7em;
-    text-align: right;
-    margin-right: 1em;
 }
 
-.c_separator {
+.opcode {
     display: inline-block;
-    background-color: darkgray;
-    width: 11em;
-    height: 2pt;
-    transform: translate(0, 6pt);
-}
-
-.c_opcode {
-    display: inline-block;
+    width: 20ch;
     color: darkred;
-    width: 13em;
 }
 
-.c_colon {
-    display: inline;
-    color: lightblue;
-}
-
-.c_quote {
-    display: inline;
-    color: seagreen;
-}
-
-.c_comment {
-    display: inline;
+.comment {
     color: peru;
-}
-
-@media (max-width: 750px) {
-    * {
-        font-size: 3vw;
-    }
-
-    #code {
-        padding: 2vw;
-    }
-
-    .c_label {
-        text-align: left;
-        display: block;
-    }
-
-    .c_opcode {
-        display: block;
-        transform: translate(5vw, 0pt);
-    }
-
-    .c_comment {
-        display: block;
-        transform: translate(10vw, 0pt);
-    }
 }
