--- a/style.css
+++ b/style.css
@@ -39,10 +39,8 @@ h1 {
     flex: 40ch 1 1;
     margin: 0;
     align-self: start;
-    line-height: 18px;
 
-    background-color: #ffd;
-    overflow: scroll;
+    background-color: ivory;
     padding: 10pt;
 }
 
@@ -62,6 +60,7 @@ h1 {
 
 #cursor {
     position: relative;
+    display: inline-block;
     width: 0;
     height: 0;
     animation: 0.5s linear infinite cursor_blink;
@@ -84,22 +83,29 @@ h1 {
     color: white;
 }
 
-.c {
-    display: inline;
+.codeline {
+    display: inline-block;
+    width: 100%;
+    height: 18px;
 }
 
-.branchlabel {
+.oddline {
+    background-color: #e0f0e8;
+}
+
+.label {
     display: inline-block;
-    width: 10ch;
+    min-width: 15%;
     color: deeppink;
 }
 
-.opcode {
+.code {
     display: inline-block;
     width: 20ch;
     color: darkred;
 }
 
 .comment {
+    display: inline-block;
     color: peru;
 }
