--- a/style.css
+++ b/style.css
@@ -84,13 +84,9 @@ h1 {
 }
 
 .codeline {
-    display: inline-block;
+    display: block;
     width: 100%;
     height: 18px;
-}
-
-.oddline {
-    background-color: #e0f0e8;
 }
 
 .label {
@@ -101,7 +97,7 @@ h1 {
 
 .code {
     display: inline-block;
-    width: 20ch;
+    min-width: 30%;
     color: darkred;
 }
 
