many fixups and style consistency fixes

--- a/fantasy-console/src/style.css
+++ b/fantasy-console/src/style.css
@@ -8,10 +8,12 @@ body {
     background-image: url("bg.png");
 }
 
+/*
 canvas {
     image-rendering: pixelated;
     image-rendering: optimizeSpeed;
-}
+}*/
+
 
 #mainflex {
     display: flex;
