--- a/games/redbricks/style.css
+++ b/games/redbricks/style.css
@@ -7,6 +7,7 @@ body {
     height: 100svh;
     margin: 0;
     background: black;
+    color: white;
 }
 
 #playfield {
@@ -18,6 +19,7 @@ body {
 
 .viewport {
     transform-origin: 0px 0px;
+    overflow: hidden;
 }
 
 @media (min-aspect-ratio: 1/1) {
@@ -28,14 +30,32 @@ body {
 }
 
 .game-entity {
-    background: #fff;
-    display: block;
     position: absolute;
 }
 
+.brick, .ball, .paddle {
+    outline-offset: -1px;
+}
+
 .brick {
-    background: linear-gradient(#f00 0%, #00f 100%);
-    outline: 1px solid white;
-    border-radius: 2px;
-    box-shadow: 0px 0px 10px red;
+    background: red;
+}
+
+.brick.solid {
+    background: gray;
+}
+
+.ball {
+    outline: 1px solid #fff;
+    z-index: 1;
+}
+
+.paddle {
+    background: #08f;
+}
+
+#scoreboard {
+    position: absolute;
+    margin: 0;
+    z-index: 1;
 }
