--- a/games/redbricks/style.css
+++ b/games/redbricks/style.css
@@ -25,7 +25,7 @@ pre {
 
 .viewport {
     transform-origin: 0px 0px;
-    background: radial-gradient(circle at 50% 10%, #382818 0%, #181838 100%);
+    background: radial-gradient(circle at 50% 10%, #3c2414 0%, #181838 100%);
     border-radius: 4px;
     overflow: hidden;
 }
