--- a/games/redbricks/style.css
+++ b/games/redbricks/style.css
@@ -70,7 +70,9 @@ pre {
 }
 
 .brick.solid {
-    background: linear-gradient(45deg, #fff 0%, #a88 30%, #def 50%, #988 70%, #fff 100%);
+    outline: 2px solid #fff4;
+    outline-offset: -2px;
+    background: conic-gradient(from 0.9turn, #fed 0%, #a88 30%, #def 50%, #988 80%, #fff 100%);
 }
 
 .brick.killer {
@@ -124,9 +126,9 @@ pre {
 
 .paddle {
     z-index: 2;
-    border-top: 1px solid white;
+    border-top: 2px solid white;
     background: linear-gradient(#048 0%, #08f 40%);
-    border-radius: 0px 0px 4px 4px;
+    border-radius: 16px 16px 4px 4px / 1px 1px 4px 4px;
 }
 
 .blackHole {
@@ -157,18 +159,31 @@ pre {
 }
 
 .portal {
-    background: repeating-linear-gradient(60deg, #f08, #0f4 10%, #f08 20%);
     background-size: 200% 200%;
     border-radius: 2px;
     box-shadow: 0px 0px 4px #f0f;
-    animation: 1s linear 0s infinite forwards portal;
 }
 
-@keyframes portal {
+.portal.right, .portal.left {
+    background-image: repeating-linear-gradient(60deg, #f08, #0f4 10%, #f08 20%);
+    animation: 1s linear 0s infinite forwards portalX;
+}
+
+@keyframes portalX {
     0% { background-position: 0% 40% }
     100% { background-position: 0% 0% }
 }
 
-.portal.left {
+.portal.bottom, .portal.top {
+    background-image: repeating-linear-gradient(30deg, #f08, #0f4 10%, #f08 20%);
+    animation: 1s linear 0s infinite forwards portalY;
+}
+
+@keyframes portalY {
+    0% { background-position: 40% 0% }
+    100% { background-position: 0% 0% }
+}
+
+.portal.left, .portal.bottom {
     animation-direction: reverse;
 }
