--- a/games/redbricks/style.css
+++ b/games/redbricks/style.css
@@ -130,10 +130,11 @@ pre {
 .ball {
   z-index: 1;
   border-radius: 1px;
-  box-shadow:
+  /*box-shadow:
     0 0 60px 30px #fff,
-    /* inner white */ 0 0 100px 60px #f0f,
-    /* middle magenta */ 0 0 140px 90px #0ff; /* outer cyan */
+    0 0 100px 60px #f0f,
+   0 0 140px 90px #0ff;
+    */
 }
 
 .paddle {
